--- a/.local/share/code-server/User/History/-75aa7516/jUoS.yml
+++ b/.local/share/code-server/User/History/-75aa7516/jUoS.yml
@@ -1,27 +1,14 @@
 name: Build and Push Docker Image
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-      
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'
-
-    - name: Install and Build Frontend
-      run: |
-        cd frontend
-        npm install
-        npm run build
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -34,15 +21,21 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-buildx-
 
-    - name: Login to Docker Registry (GHCR)
+    - name: Set up Docker login to GHCR
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Generate docker tag
+      id: prep
+      run: |
+        echo "REPO_NAME=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+        echo "DATE_TAG=$(date +%s)" >> $GITHUB_ENV
+
     - name: Build Docker image
-      run: docker build -f Dockerfile -t ghcr.io/${{ github.repository_owner }}/ssh-project:${{ github.run_id }} .
+      run: docker build -f docker/Dockerfile . --tag ghcr.io/$REPO_NAME/ssh-project:$DATE_TAG
 
     - name: Push Docker image to GHCR
-      run: docker push ghcr.io/${{ github.repository_owner }}/ssh-project:${{ github.run_id }}
+      run: docker push ghcr.io/$REPO_NAME/ssh-project:$DATE_TAG
