--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -7,7 +7,7 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Frontend routes
+    # Frontend routes (SPA)
     location / {
         try_files $uri /index.html;
     }
@@ -19,5 +19,13 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
+        proxy_redirect off;  # Disable automatic redirects by the backend (if any)
+    }
+
+    # Optional: Custom error handling
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
