--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,14 +51,21 @@ jobs:
       - name: Determine Docker image tag
         id: tag
         run: |
-          # Fetch all previous tags and determine the next build number
-          last_build_number=$(curl -s "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/tags" | jq -r '.[0].name' | sed 's/^testing-//')
-          if [[ -z "$last_build_number" ]]; then
-            next_build_number=1
+          # If tag_name is provided in workflow_dispatch, use it directly
+          if [ -n "${{ github.event.inputs.tag_name }}" ]; then
+            echo "IMAGE_TAG=${{ github.event.inputs.tag_name }}" >> $GITHUB_ENV
           else
-            next_build_number=$((last_build_number + 1))
+            # Fetch all testing-* tags and determine the next build number
+            all_tags=$(curl -s "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/tags" | jq -r '.[].name')
+            # Extract only the testing-* tags and get the latest build number
+            last_build_number=$(echo "$all_tags" | grep '^testing-' | sed 's/^testing-//' | sort -n | tail -n 1)
+            if [[ -z "$last_build_number" ]]; then
+              next_build_number=1
+            else
+              next_build_number=$((last_build_number + 1))
+            fi
+            echo "IMAGE_TAG=testing-${next_build_number}" >> $GITHUB_ENV
           fi
-          echo "IMAGE_TAG=testing-${next_build_number}" >> $GITHUB_ENV
 
       - name: Build and Push Docker image
         uses: docker/build-push-action@v2
@@ -66,7 +73,7 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: ghcr.io/${{ env.REPO_OWNER }}/ssh-project:${{ env.IMAGE_TAG }}  # Only push the testing-<build_number> tag
+          tags: ghcr.io/${{ env.REPO_OWNER }}/ssh-project:${{ env.IMAGE_TAG }}
 
       - name: Delete old Docker images (keep only 6 latest)
         run: |
