--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -56,7 +56,7 @@ jobs:
             echo "IMAGE_TAG=${{ github.event.inputs.tag_name }}" >> $GITHUB_ENV
           else
             # Fetch all testing-* tags and determine the next build number
-            all_tags=$(curl -s "https://api.github.com/repos/${{ github.repository_owner }}/{{ github.repository }}/tags")
+            all_tags=$(curl -s "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/tags")
             last_build_number=$(echo "$all_tags" | jq -r 'map(select(.name | startswith("testing-"))) | .[].name' | sed 's/^testing-//' | sort -n | tail -n 1)
             
             if [[ -z "$last_build_number" ]]; then
