--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -18,6 +18,10 @@ http {
             index  index.html index.htm;
         }
 
+        location /env.js {
+            root /usr/share/nginx/html;
+        }
+
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
