--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -13,15 +13,23 @@ http {
         listen       8080;
         server_name  localhost;
 
+        # Serve static files for the React app
         location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
         }
 
-        location /env.js {
-            root /usr/share/nginx/html;
+        # WebSocket Proxy for the backend server
+        location /ws/ {
+            proxy_pass http://localhost:8081;  # Backend WebSocket server
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
+        # Error page configuration
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
