--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^7.1.0",
     "express": "^4.21.2",
     "is-stream": "^4.0.1",
     "make-dir": "^5.0.0",
+    "mongoose": "^8.12.1",
     "node-ssh": "^13.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
