--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -19,9 +19,23 @@ http {
             index  index.html index.htm;
         }
 
-        # Proxy IO requests
-        location /socket.io/ {
+        # Proxy SSH socket requests
+        location /ssh-socket.io/ {
             proxy_pass http://127.0.0.1:8081;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            # Timeout settings
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
+        }
+
+        # Proxy database requests
+        location /database/ {
+            proxy_pass http://127.0.0.1:8082;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
