Changes to connection system to support docker

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -20,7 +20,7 @@ http {
         }
 
         # Proxy SSH socket requests
-        location /ssh-socket.io/ {
+        location /ssh.io/ {
             proxy_pass http://127.0.0.1:8081;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -30,7 +30,7 @@ http {
         }
 
         # Proxy database requests
-        location /database-socket.io/ {
+        location /database.io/ {
             proxy_pass http://127.0.0.1:8082;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
