Attempt #3 to auto compile MongoDB into the build to exclude it from the compose.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,13 +32,21 @@ COPY --from=frontend-builder /app/dist /usr/share/nginx/html
 COPY --from=backend-builder /app/node_modules ./node_modules
 COPY --from=backend-builder /app/src/backend ./src/backend
 
-# Create directories for nginx
-RUN mkdir -p /var/log/nginx && \
+# Create directories for MongoDB and nginx
+RUN mkdir -p /data/db && \
+    mkdir -p /var/log/nginx && \
     mkdir -p /var/lib/nginx && \
+    mkdir -p /var/log/mongodb && \
+    chown -R mongodb:mongodb /data/db /var/log/mongodb && \
     chown -R www-data:www-data /var/log/nginx /var/lib/nginx
 
 # Set environment variables
-ENV MONGO_URL=mongodb://localhost:27017/termix
+ENV MONGO_URL=mongodb://localhost:27017/termix \
+    MONGODB_DATA_DIR=/data/db \
+    MONGODB_LOG_DIR=/var/log/mongodb
+
+# Create volume for MongoDB data
+VOLUME ["/data/db"]
 
 # Expose ports
 EXPOSE 8080 8081 8082 27017
